Lab3/y.output
Terminals unused in grammar

   DO
   BREAK
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 $@1: /* empty */

    7 $@2: /* empty */

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement

    9 $@3: /* empty */

   10 func_definition: type_specifier ID LPAREN RPAREN $@3 compound_statement

   11 parameter_list: parameter_list COMMA type_specifier ID
   12               | parameter_list COMMA type_specifier
   13               | type_specifier ID
   14               | type_specifier

   15 $@4: /* empty */

   16 compound_statement: LCURL $@4 statements RCURL

   17 $@5: /* empty */

   18 compound_statement: LCURL $@5 RCURL

   19 var_declaration: type_specifier declaration_list SEMICOLON

   20 type_specifier: INT
   21               | FLOAT
   22               | VOID

   23 declaration_list: declaration_list COMMA ID
   24                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   25                 | ID
   26                 | ID LTHIRD CONST_INT RTHIRD

   27 statements: statement
   28           | statements statement

   29 statement: var_declaration
   30          | func_definition
   31          | expression_statement
   32          | compound_statement
   33          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement ELSE statement
   36          | WHILE LPAREN expression RPAREN statement
   37          | PRINTLN LPAREN ID RPAREN SEMICOLON
   38          | RETURN expression SEMICOLON

   39 expression_statement: SEMICOLON
   40                     | expression SEMICOLON

   41 variable: ID
   42         | ID LTHIRD expression RTHIRD

   43 expression: logic_expression
   44           | variable ASSIGNOP logic_expression

   45 logic_expression: rel_expression
   46                 | rel_expression LOGICOP rel_expression

   47 rel_expression: simple_expression
   48               | simple_expression RELOP simple_expression

   49 simple_expression: term
   50                  | simple_expression ADDOP term

   51 term: unary_expression
   52     | term MULOP unary_expression

   53 unary_expression: ADDOP unary_expression
   54                 | NOT unary_expression
   55                 | factor

   56 factor: variable
   57       | ID LPAREN argument_list RPAREN
   58       | LPAREN expression RPAREN
   59       | CONST_INT
   60       | CONST_FLOAT
   61       | variable INCOP
   62       | variable DECOP

   63 argument_list: arguments
   64              | /* empty */

   65 arguments: arguments COMMA logic_expression
   66          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 34 35
ELSE (259) 35
FOR (260) 33
WHILE (261) 36
DO (262)
BREAK (263)
INT (264) 20
CHAR (265)
FLOAT (266) 21
DOUBLE (267)
VOID (268) 22
RETURN (269) 38
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 37
ADDOP (275) 50 53
MULOP (276) 52
INCOP (277) 61
DECOP (278) 62
RELOP (279) 48
ASSIGNOP (280) 44
LOGICOP (281) 46
NOT (282) 54
LPAREN (283) 8 10 33 34 35 36 37 57 58
RPAREN (284) 8 10 33 34 35 36 37 57 58
LCURL (285) 16 18
RCURL (286) 16 18
LTHIRD (287) 24 26 42
RTHIRD (288) 24 26 42
COMMA (289) 11 12 23 24 65
SEMICOLON (290) 19 37 38 39 40
CONST_INT (291) 24 26 59
CONST_FLOAT (292) 60
ID (293) 8 10 11 13 23 24 25 26 37 41 42 57
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 8 10, on right: 5 30
$@1 (45)
    on left: 6, on right: 8
$@2 (46)
    on left: 7, on right: 8
$@3 (47)
    on left: 9, on right: 10
parameter_list (48)
    on left: 11 12 13 14, on right: 8 11 12
compound_statement (49)
    on left: 16 18, on right: 8 10 32
$@4 (50)
    on left: 15, on right: 16
$@5 (51)
    on left: 17, on right: 18
var_declaration (52)
    on left: 19, on right: 4 29
type_specifier (53)
    on left: 20 21 22, on right: 8 10 11 12 13 14 19
declaration_list (54)
    on left: 23 24 25 26, on right: 19 23 24
statements (55)
    on left: 27 28, on right: 16 28
statement (56)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 27 28 33 34 35
    36
expression_statement (57)
    on left: 39 40, on right: 31 33
variable (58)
    on left: 41 42, on right: 44 56 61 62
expression (59)
    on left: 43 44, on right: 33 34 35 36 38 40 42 58
logic_expression (60)
    on left: 45 46, on right: 43 44 65 66
rel_expression (61)
    on left: 47 48, on right: 45 46
simple_expression (62)
    on left: 49 50, on right: 47 48 50
term (63)
    on left: 51 52, on right: 49 50 52
unary_expression (64)
    on left: 53 54 55, on right: 51 52 53 54
factor (65)
    on left: 56 57 58 59 60 61 62, on right: 55
argument_list (66)
    on left: 63 64, on right: 57
arguments (67)
    on left: 65 66, on right: 63 65


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   20 type_specifier: INT .

    $default  reduce using rule 20 (type_specifier)


State 2

   21 type_specifier: FLOAT .

    $default  reduce using rule 21 (type_specifier)


State 3

   22 type_specifier: VOID .

    $default  reduce using rule 22 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    8 func_definition: type_specifier . ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier . ID LPAREN RPAREN $@3 compound_statement
   19 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    8 func_definition: type_specifier ID . LPAREN $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier ID . LPAREN RPAREN $@3 compound_statement
   25 declaration_list: ID .
   26                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 25 (declaration_list)


State 13

   19 var_declaration: type_specifier declaration_list . SEMICOLON
   23 declaration_list: declaration_list . COMMA ID
   24                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


State 14

    8 func_definition: type_specifier ID LPAREN . $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier ID LPAREN . RPAREN $@3 compound_statement

    RPAREN  shift, and go to state 18

    $default  reduce using rule 6 ($@1)

    $@1  go to state 19


State 15

   26 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 20


State 16

   23 declaration_list: declaration_list COMMA . ID
   24                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 21


State 17

   19 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 19 (var_declaration)


State 18

   10 func_definition: type_specifier ID LPAREN RPAREN . $@3 compound_statement

    $default  reduce using rule 9 ($@3)

    $@3  go to state 22


State 19

    8 func_definition: type_specifier ID LPAREN $@1 . parameter_list RPAREN $@2 compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    parameter_list  go to state 23
    type_specifier  go to state 24


State 20

   26 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 25


State 21

   23 declaration_list: declaration_list COMMA ID .
   24                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 26

    $default  reduce using rule 23 (declaration_list)


State 22

   10 func_definition: type_specifier ID LPAREN RPAREN $@3 . compound_statement

    LCURL  shift, and go to state 27

    compound_statement  go to state 28


State 23

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list . RPAREN $@2 compound_statement
   11 parameter_list: parameter_list . COMMA type_specifier ID
   12               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 29
    COMMA   shift, and go to state 30


State 24

   13 parameter_list: type_specifier . ID
   14               | type_specifier .

    ID  shift, and go to state 31

    $default  reduce using rule 14 (parameter_list)


State 25

   26 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 26 (declaration_list)


State 26

   24 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 32


State 27

   16 compound_statement: LCURL . $@4 statements RCURL
   18                   | LCURL . $@5 RCURL

    RCURL     reduce using rule 17 ($@5)
    $default  reduce using rule 15 ($@4)

    $@4  go to state 33
    $@5  go to state 34


State 28

   10 func_definition: type_specifier ID LPAREN RPAREN $@3 compound_statement .

    $default  reduce using rule 10 (func_definition)


State 29

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN . $@2 compound_statement

    $default  reduce using rule 7 ($@2)

    $@2  go to state 35


State 30

   11 parameter_list: parameter_list COMMA . type_specifier ID
   12               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 36


State 31

   13 parameter_list: type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


State 32

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 37


State 33

   16 compound_statement: LCURL $@4 . statements RCURL

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statements            go to state 53
    statement             go to state 54
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 34

   18 compound_statement: LCURL $@5 . RCURL

    RCURL  shift, and go to state 64


State 35

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 27

    compound_statement  go to state 65


State 36

   11 parameter_list: parameter_list COMMA type_specifier . ID
   12               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 66

    $default  reduce using rule 12 (parameter_list)


State 37

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 24 (declaration_list)


State 38

   34 statement: IF . LPAREN expression RPAREN statement
   35          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 67


State 39

   33 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 68


State 40

   36 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 69


State 41

   38 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 70
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 42

   37 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 71


State 43

   53 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 72
    unary_expression  go to state 73
    factor            go to state 63


State 44

   54 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 72
    unary_expression  go to state 74
    factor            go to state 63


State 45

   58 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 75
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 46

   39 expression_statement: SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 47

   59 factor: CONST_INT .

    $default  reduce using rule 59 (factor)


State 48

   60 factor: CONST_FLOAT .

    $default  reduce using rule 60 (factor)


State 49

   41 variable: ID .
   42         | ID . LTHIRD expression RTHIRD
   57 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 76
    LTHIRD  shift, and go to state 77

    $default  reduce using rule 41 (variable)


State 50

   30 statement: func_definition .

    $default  reduce using rule 30 (statement)


State 51

   32 statement: compound_statement .

    $default  reduce using rule 32 (statement)


State 52

   29 statement: var_declaration .

    $default  reduce using rule 29 (statement)


State 53

   16 compound_statement: LCURL $@4 statements . RCURL
   28 statements: statements . statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    RCURL        shift, and go to state 78
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 79
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 54

   27 statements: statement .

    $default  reduce using rule 27 (statements)


State 55

   31 statement: expression_statement .

    $default  reduce using rule 31 (statement)


State 56

   44 expression: variable . ASSIGNOP logic_expression
   56 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP     shift, and go to state 80
    DECOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82

    $default  reduce using rule 56 (factor)


State 57

   40 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 83


State 58

   43 expression: logic_expression .

    $default  reduce using rule 43 (expression)


State 59

   45 logic_expression: rel_expression .
   46                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 84

    $default  reduce using rule 45 (logic_expression)


State 60

   47 rel_expression: simple_expression .
   48               | simple_expression . RELOP simple_expression
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85
    RELOP  shift, and go to state 86

    $default  reduce using rule 47 (rel_expression)


State 61

   49 simple_expression: term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 49 (simple_expression)


State 62

   51 term: unary_expression .

    $default  reduce using rule 51 (term)


State 63

   55 unary_expression: factor .

    $default  reduce using rule 55 (unary_expression)


State 64

   18 compound_statement: LCURL $@5 RCURL .

    $default  reduce using rule 18 (compound_statement)


State 65

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement .

    $default  reduce using rule 8 (func_definition)


State 66

   11 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 11 (parameter_list)


State 67

   34 statement: IF LPAREN . expression RPAREN statement
   35          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 88
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 68

   33 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    expression_statement  go to state 89
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 69

   36 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 90
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 70

   38 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 91


State 71

   37 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 92


State 72

   56 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP  shift, and go to state 80
    DECOP  shift, and go to state 81

    $default  reduce using rule 56 (factor)


State 73

   53 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 74

   54 unary_expression: NOT unary_expression .

    $default  reduce using rule 54 (unary_expression)


State 75

   58 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 93


State 76

   57 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    $default  reduce using rule 64 (argument_list)

    variable           go to state 72
    logic_expression   go to state 94
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63
    argument_list      go to state 95
    arguments          go to state 96


State 77

   42 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 97
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 78

   16 compound_statement: LCURL $@4 statements RCURL .

    $default  reduce using rule 16 (compound_statement)


State 79

   28 statements: statements statement .

    $default  reduce using rule 28 (statements)


State 80

   61 factor: variable INCOP .

    $default  reduce using rule 61 (factor)


State 81

   62 factor: variable DECOP .

    $default  reduce using rule 62 (factor)


State 82

   44 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 72
    logic_expression   go to state 98
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 83

   40 expression_statement: expression SEMICOLON .

    $default  reduce using rule 40 (expression_statement)


State 84

   46 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 72
    rel_expression     go to state 99
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 85

   50 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 72
    term              go to state 100
    unary_expression  go to state 62
    factor            go to state 63


State 86

   48 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 72
    simple_expression  go to state 101
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 87

   52 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 72
    unary_expression  go to state 102
    factor            go to state 63


State 88

   34 statement: IF LPAREN expression . RPAREN statement
   35          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 103


State 89

   33 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    expression_statement  go to state 104
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 90

   36 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 105


State 91

   38 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 38 (statement)


State 92

   37 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 106


State 93

   58 factor: LPAREN expression RPAREN .

    $default  reduce using rule 58 (factor)


State 94

   66 arguments: logic_expression .

    $default  reduce using rule 66 (arguments)


State 95

   57 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 107


State 96

   63 argument_list: arguments .
   65 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 108

    $default  reduce using rule 63 (argument_list)


State 97

   42 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 109


State 98

   44 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 44 (expression)


State 99

   46 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 46 (logic_expression)


State 100

   50 simple_expression: simple_expression ADDOP term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 50 (simple_expression)


State 101

   48 rel_expression: simple_expression RELOP simple_expression .
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85

    $default  reduce using rule 48 (rel_expression)


State 102

   52 term: term MULOP unary_expression .

    $default  reduce using rule 52 (term)


State 103

   34 statement: IF LPAREN expression RPAREN . statement
   35          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 110
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 104

   33 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 111
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 105

   36 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 112
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 106

   37 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 113


State 107

   57 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 57 (factor)


State 108

   65 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 72
    logic_expression   go to state 114
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 109

   42 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 42 (variable)


State 110

   34 statement: IF LPAREN expression RPAREN statement .
   35          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 115

    $default  reduce using rule 34 (statement)


State 111

   33 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 116


State 112

   36 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 36 (statement)


State 113

   37 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 37 (statement)


State 114

   65 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 65 (arguments)


State 115

   35 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 117
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 116

   33 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    PRINTLN      shift, and go to state 42
    ADDOP        shift, and go to state 43
    NOT          shift, and go to state 44
    LPAREN       shift, and go to state 45
    LCURL        shift, and go to state 27
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 118
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 117

   35 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 35 (statement)


State 118

   33 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 33 (statement)
